--- a/form-login-project/form-login.css
+++ b/form-login-project/form-login.css
@@ -5,6 +5,7 @@
     align-items: center; */
     position: absolute;
     top: 25%;
+    right: 25%;
     width: 100%;
     /* height: 600px; */
     /* background-color: azure; */
