--- a/todos-project/todos.css
+++ b/todos-project/todos.css
@@ -4,8 +4,8 @@ body{
 
 .container {
     position: absolute;
-    top: 25%;
-    left: 25%;
+    /* top: %; */
+    left: 28%;
     width: 50%;
     height: auto;
     /* background-color: bisque; */
@@ -23,6 +23,12 @@ h1 {
     margin-bottom: 0;
 }
 
+.todos-container {
+    display: flex;
+    flex-direction: column;
+    gap: 2px;
+}
+
 .todo{
     display: flex;
     flex-direction: row;
@@ -38,6 +44,9 @@ h1 {
     width: 346px;
     padding-top: 5px;
     padding-bottom: 5px;
+    padding-top: 5px;
+    padding-bottom: 5px;
+    padding-left: 2px;
 }
 
 .todo-name {
@@ -46,6 +55,9 @@ h1 {
     padding-bottom: 5px;
     background-color: azure;    
     width: 352px;
+    padding-top: 4px;
+    padding-bottom: 4px;
+    padding-left: 5px;
 }
 
 .btn-add {
